# openthread

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crate-dry-run.yml  publish-crate.yml  rust_ci.yml
examples/esp/: Cargo.toml  build.rs
examples/host/: Cargo.toml  README.md
examples/nrf/: Cargo.toml  build.rs
examples/std/: Cargo.toml  README.md
examples/std/src/: platform.rs
examples/stm32wb/: Cargo.toml
examples/stm32wb/.cargo/: config.toml
openthread/: CHANGELOG.md  Cargo.toml  README.md
openthread-sys/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.md  build.rs
openthread-sys/pre-generated/: README.md
openthread-sys/pre-generated/13518017024750854729/: config.txt
openthread-sys/src/: lib.rs
openthread-sys/src/include/: riscv32imac-unknown-none-elf.rs  riscv32imc-unknown-none-elf.rs  thumbv6m-none-eabi.rs  thumbv7em-none-eabi.rs
openthread/src/: anyhow.rs  coap.rs  dataset.rs  dns.rs  enal.rs  esp.rs  joiner.rs  lib.rs  nat64.rs  netdata.rs  nrf.rs  ping.rs  platform.rs  radio.rs  rcp.rs  scan.rs  settings.rs  srp.rs  stm32wb.rs  udp.rs
openthread/src/radio/: esp.rs  nrf.rs  spinel.rs
openthread/src/radio/spinel/: serial.rs  spi.rs  uart.rs
xtask/: Cargo.toml
xtask/src/: main.rs  ping_stress.rs
