[package]
name = "openthread-sys"
version = "0.1.0"
edition = "2021"
links = "openthread"
license = "MIT OR Apache-2.0"
resolver = "2"
rust-version = "1.84"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "Raw bindings for OpenThread"
repository = "https://github.com/esp-rs/openthread"
readme = "README.md"
exclude = [
    "*.pyc",
    "openthread/.github",
    "openthread/doc",
    "openthread/script",
    # The vendored mbedtls subtree ships its own tests, programs, docs and IDE
    # project files. We only need the library sources + headers + CMakeLists.
    "openthread/third_party/mbedtls/repo/tests",
    "openthread/third_party/mbedtls/repo/programs",
    "openthread/third_party/mbedtls/repo/framework",
    "openthread/third_party/mbedtls/repo/docs",
    "openthread/third_party/mbedtls/repo/visualc",
    # OpenThread's own `tests/CMakeLists.txt` is unconditionally `add_subdirectory`'d
    # by the root, but every subdir below it is gated by flags we never set
    # (`OT_FTD`, `BUILD_TESTING`, `OT_FUZZ_TARGETS`, `OT_PLATFORM=nexus`).
    # Keeping the top-level CMakeLists; pruning the unreached contents.
    "openthread/tests/unit",
    "openthread/tests/gtest",
    "openthread/tests/fuzz",
    "openthread/tests/nexus",
    "openthread/tests/toranj",
    "openthread/tests/scripts",
]

[features]
default = []
# Always generate the bindings during build, even if pre-built bindings for the build target are available
force-generate-bindings = []
# Force the use of the Espressif Riscv GCC toolchain, if the target is a `riscv32*-` target
# If this feature is not enabled, the build will assume and use the "official" RiscV GCC toolchain:
# https://github.com/riscv-collab/riscv-gnu-toolchain
force-esp-riscv-toolchain = []

# TODO: Unfortunately we need the full-blown mbedtls-rs here because it defines
#       crucial symbols.
[dependencies.mbedtls-rs]
git = "https://github.com/esp-rs/mbedtls-rs"
rev = "8b00d965aba67688caf5e40576f531fd5ac35b93"

[dependencies.mbedtls-rs-sys]
git = "https://github.com/esp-rs/mbedtls-rs"
rev = "8b00d965aba67688caf5e40576f531fd5ac35b93"
# TODO: this is currently required because otherwise mbedtls-rs-sys won't
#       expose the 'include' metadata. 
features = ["force-generate-bindings"]

[build-dependencies]
anyhow = "1"
bindgen = "0.72"
env_logger = "0.11"
log = "0.4"
cmake = "0.1.52"
cc = "1.1"
fs_extra = "1.3"
embuild = "0.33"
