[package]
name = "openthread"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "Platform-agnostic, async Rust bindings for OpenThread"
repository = "https://github.com/esp-rs/openthread"
readme = "README.md"

[lib]
harness = false

[features]
default = []
edge-nal = ["udp", "dep:edge-nal"]
udp = []
srp = ["udp"]
coap = []
defmt = ["dep:defmt", "heapless/defmt-03", "embassy-time/defmt"]
force-generate-bindings = ["openthread-sys/force-generate-bindings"]
force-esp-riscv-gcc = ["openthread-sys/force-esp-riscv-gcc"]
# Use GCC instead of clang
use-gcc = ["openthread-sys/use-gcc"]
isupper = [] # Provide internal implementation of the `isupper` C fn

[dependencies]
openthread-sys = { path = "../openthread-sys" }
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "1.0", default-features = false, optional = true, features = ["ip_in_core"] }
scopeguard = { version = "1", default-features = false }
rand_core = "0.9"
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-futures = "0.1"
heapless = "0.8"
bitflags = "2.5"
embassy-net-driver-channel = { version = "0.3", optional = true }
edge-nal = { version = "0.6", optional = true }
esp-radio = { version = "0.17", features = ["unstable", "ieee802154"], optional = true }
embassy-nrf = { version = "0.9", optional = true }
portable-atomic = "1"
