[package]
name = "openthread"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "Platform-agnostic, async Rust bindings for OpenThread"
repository = "https://github.com/esp-rs/openthread"
readme = "README.md"

[lib]
harness = false

[features]
default = ["matter"]
# Host-side helpers that require `std`. Currently: a ready-to-use serial
# [`SerialPort`] transport for the RCP driver (async serial over a `/dev/tty*`
# device on Unix), so a Linux/macOS host can drive an `ot-rcp` over USB. Implies
# `rcp` (the serial transport is only useful with the spinel driver). Windows
# serial support is a planned addition (its handles need overlapped I/O, unlike
# the readiness-based `async-io` path used on Unix).
std = ["rcp", "dep:async-io", "dep:nix", "embedded-io-async/std"]
# Build OpenThread against the external MbedTLS (`mbedtls-rs-sys`) rather than
# using the bundled MbedTLS.
# WARNING: do NOT combine a default (bundled-MbedTLS) OpenThread with a separate
# `mbedtls-rs-sys` elsewhere in the same firmware — that links two MbedTLS copies
# defining the same `mbedtls_*` symbols (duplicate-symbol link error at best,
# silent cross-wiring at worst). If your graph needs `mbedtls-rs-sys`, enable this
# feature so OpenThread reuses it instead of building its own.
mbedtls-rs-sys = ["openthread-sys/mbedtls-rs-sys"]

udp = [] # For backwards compatibility
srp = ["srp-client"] # For backwards compatibility

# SRP client: gates the Rust SRP API and compiles in OpenThread's SRP client.
srp-client = ["openthread-sys/srp-client"]
# Device-type / radio-location selection (additive; absence = the default).
#   ftd off -> MTD end-device (default);  ftd on -> FTD (router-capable)
#   rcp     -> the 802.15.4 radio is a separate RCP chip reached over a UART/SPI
#              (spinel) transport; this MCU runs the full stack and drives the
#              remote radio. Off (default) = the radio is local to this MCU.
#              NOTE: `rcp` changes the platform integration — instead of a local
#              `Radio` implementation, the user supplies a spinel transport (see
#              the crate docs / `OpenThread` RCP-host API).
ftd = ["openthread-sys/ftd"]
rcp = ["openthread-sys/rcp", "dep:embedded-io-async", "dep:embedded-hal", "dep:embedded-hal-async"]
# RCP manufacturing/RF diagnostics: adds `SpinelRadio::diag`, a bench/bring-up
# utility that sends `diag …` commands to the radio co-processor's firmware (RF
# tone, PER tests, channel/power setup). Implies `rcp`. Off by default — it is a
# standalone bench tool, not part of normal Thread operation, and the RCP
# firmware must itself be built with diagnostics support.
diag = ["rcp"]
# Heap configuration (see `openthread-sys`). OpenThread keeps one fixed-size
# internal heap buffer, shared by its own code and (by default) MbedTLS. Three
# independent axes tune it:
#   - `heap-ext-ot`: redirect OpenThread's OWN heap to the global allocator
#     (`HEAP_EXTERNAL_ENABLE`). The consumer must provide `otPlatCAlloc`/
#     `otPlatFree`, just as it provides `calloc`/`free` for MbedTLS.
#   - `heap-ext-mbedtls`: redirect MbedTLS to the global `calloc`/`free` instead
#     of the internal buffer. Only effective with `mbedtls-rs-sys`.
#   - `heap-int-<N>`: resize the internal buffer to N bytes (largest wins). The
#     internal buffer may still be used by whichever consumer is not redirected.
heap-ext-ot = ["openthread-sys/heap-ext-ot"]
heap-ext-mbedtls = ["openthread-sys/heap-ext-mbedtls"]
heap-int-4096 = ["openthread-sys/heap-int-4096"]
heap-int-6144 = ["openthread-sys/heap-int-6144"]
heap-int-8192 = ["openthread-sys/heap-int-8192"]
heap-int-12288 = ["openthread-sys/heap-int-12288"]
heap-int-16384 = ["openthread-sys/heap-int-16384"]
heap-int-32768 = ["openthread-sys/heap-int-32768"]
heap-int-49152 = ["openthread-sys/heap-int-49152"]
heap-int-65536 = ["openthread-sys/heap-int-65536"]
defmt = ["dep:defmt", "heapless/defmt", "embassy-time/defmt"]
force-generate-bindings = ["openthread-sys/force-generate-bindings"]
force-esp-riscv-gcc = ["openthread-sys/force-esp-riscv-gcc"]
# Use GCC instead of clang
use-gcc = ["openthread-sys/use-gcc"]
isupper = [] # Provide internal implementation of the `isupper` C fn

# ---------------------------------------------------------------------------
# Features controlling what OpenThread aspects get compiled in.
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Consumer bundles (flat: each lists every leaf it needs).
# ---------------------------------------------------------------------------

# Barebones profile for Matter
matter = ["srp-client", "dns-client", "ping-sender", "openthread-sys/matter"]

# ---------------------------------------------------------------------------
# OpenThread capability features. Each re-exports the corresponding
# `openthread-sys` knob (compiling the feature into the C library) and is the
# gate the high-level Rust API uses. `openthread` aims to wrap most of
# OpenThread's capabilities, so these are surfaced here rather than requiring
# the user to reach into `openthread-sys` directly.
#
# (Device type MTD/FTD and co-processor role NCP/RCP are not features — those
# are separate `.a` archives selected at link time; see `openthread-sys`.)
# ---------------------------------------------------------------------------

srp-server = ["openthread-sys/srp-server"]
dns-client = ["openthread-sys/dns-client"]
dnssd-server = ["openthread-sys/dnssd-server"]
mdns = ["openthread-sys/mdns"]
service = ["openthread-sys/service"]
netdata-publisher = ["openthread-sys/netdata-publisher"]
coap = ["openthread-sys/coap"]
coap-block = ["openthread-sys/coap-block"]
coap-observe = ["openthread-sys/coap-observe"]
coaps = ["openthread-sys/coaps"]
tcp = ["openthread-sys/tcp"]
slaac = ["openthread-sys/slaac"]
dhcp6-client = ["openthread-sys/dhcp6-client"]
dhcp6-server = ["openthread-sys/dhcp6-server"]
nat64 = ["openthread-sys/nat64"]
joiner = ["openthread-sys/joiner"]
commissioner = ["openthread-sys/commissioner"]
border-router = ["openthread-sys/border-router"]
border-routing = ["openthread-sys/border-routing"]
ping-sender = ["openthread-sys/ping-sender"]
link-metrics-initiator = ["openthread-sys/link-metrics-initiator"]
link-metrics-subject = ["openthread-sys/link-metrics-subject"]
mac-filter = ["openthread-sys/mac-filter"]
jam-detection = ["openthread-sys/jam-detection"]
child-supervision = ["openthread-sys/child-supervision"]
mesh-diag = ["openthread-sys/mesh-diag"]
history-tracker = ["openthread-sys/history-tracker"]
dataset-updater = ["openthread-sys/dataset-updater"]
ecdsa = ["openthread-sys/ecdsa"]
sntp-client = ["openthread-sys/sntp-client"]
trel = ["openthread-sys/trel"]

[dependencies]
openthread-sys = { workspace = true, default-features = false }
log = { workspace = true, default-features = false, optional = true }
defmt = { workspace = true, default-features = false, optional = true, features = ["ip_in_core"] }
scopeguard = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
embassy-sync = { workspace = true, default-features = false }
embassy-time = { workspace = true, default-features = false }
embassy-futures = { workspace = true, default-features = false }
heapless = { workspace = true, default-features = false }
bitflags = { workspace = true, default-features = false }
embassy-net-driver-channel = { workspace = true, default-features = false, optional = true }
# Used by the `rcp` feature's provided transports (`UartSpinelTransport` over an
# `embedded-io-async` byte stream; `SpiSpinelTransport` over an
# `embedded-hal-async` SPI device + interrupt pin — the pin's level is also polled
# via `embedded-hal`'s `InputPin`).
embedded-io-async = { workspace = true, default-features = false, optional = true }
embedded-hal = { workspace = true, default-features = false, optional = true }
embedded-hal-async = { workspace = true, default-features = false, optional = true }
# `std` feature: host serial transport (`radio::spinel::serial`). `async-io` for
# readiness-based async I/O over the tty fd; `nix` to open + configure it
# (`fs` = open, `term` = termios/baud). Unix only for now.
async-io = { workspace = true, default-features = false, optional = true }
nix = { workspace = true, default-features = false, features = ["fs", "term", "poll"], optional = true }
esp-radio = { workspace = true, default-features = false, features = ["unstable", "ieee802154"], optional = true }
embassy-nrf = { workspace = true, default-features = false, optional = true }
portable-atomic = { workspace = true, default-features = false }
