[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "xtask for pregenerating OpemThread libs and bindings"
repository = "https://github.com/ivmarkov/esp-openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1"
tempfile = "3"
