[package]
name = "host-openthread-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "host"]
description = "openthread examples for a host (Linux/macOS) driving a remote RCP over serial"
repository = "https://github.com/esp-rs/openthread"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[features]
default = []
# Regenerate the OpenThread bindings on the fly (needed until the committed
# host-target bindings match the active feature set).
force-generate-bindings = ["openthread/force-generate-bindings"]

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-std", "executor-thread"] }
embassy-time = { version = "0.5", features = ["std"] }
embassy-futures = "0.1"
log = "0.4"
env_logger = "0.11"
heapless = "0.9"
rand = { version = "0.9", features = ["std", "std_rng", "os_rng"] }
static_cell = "2.1"
# `utoa` provides the `utoa`/`strtoul` C symbols OpenThread's C references;
# `critical-section` with `std` supplies a host `critical-section` impl.
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }
critical-section = { version = "1.2", features = ["std"] }

# The `std` feature pulls in `rcp` + the host `SerialPort` transport.
#
# `heap-ext-ot` routes OpenThread's own heap to the global allocator (we provide
# `otPlatCAlloc`/`otPlatFree` in `platform.rs`). On a host there is no reason to
# run OpenThread + MbedTLS out of OT's small internal heap buffer when a real
# libc heap is available.
openthread = { path = "../../openthread", features = ["std", "udp", "srp", "dns-client", "embassy-net-driver-channel", "isupper", "heap-ext-ot", "log"] }
libc = "0.2"

[patch.crates-io]
# OpenThread emplaces mbedtls crypto contexts in 8-aligned opaque storage, so
# an mbedtls-rs-sys whose alt contexts tolerate any alignment is required; the
# published 0.1.0 demands 16-byte alignment. Drop this patch once a version
# with alignment-agnostic contexts is published.
mbedtls-rs-sys = { path = "/home/ivan/dev/mbedtls-rs/mbedtls-rs-sys" }

[[bin]]
path = "./src/bin/basic_udp.rs"
name = "basic_udp"

[[bin]]
path = "./src/bin/srp.rs"
name = "srp"

[[bin]]
path = "./src/bin/dns.rs"
name = "dns"
